--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,80 +1,67 @@
 {
     "version": "2.0.0",
-    "runner": "terminal",
-    "type": "shell",
-    "echoCommand": true,
-    "presentation": {
-        "reveal": "always"
-    },
     "tasks": [
         {
             "label": "save and compile for C++",
-            "command": "g++ -std=c++23",
-            "args": [      
-                "-Wall",      // 경고 표시
-                "-Wextra",    // 추가 경고
-                "-g",         // 디버깅 정보
+            "type": "shell",
+            "command": "g++",
+            "args": [
+                "-std=c++23",
+                "-Wall",
+                "-Wextra",
+                "-g",
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
             "group": "build",
-            "problemMatcher": {
-                "fileLocation": [
-                    "relative",
-                    "${workspaceRoot}"
-                ],
-                "pattern": {
-                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
-                    "file": 1,
-                    "line": 2,
-                    "column": 3,
-                    "severity": 4,
-                    "message": 5
-                }
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "presentation": {
+                "reveal": "always"
             }
         },
         {
             "label": "save and compile for C",
-            "command": "gcc -std=c23",
+            "type": "shell",
+            "command": "gcc",
             "args": [
+                "-std=c23",
+                "-Wall",
+                "-Wextra",
+                "-g",
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
             "group": "build",
-            "problemMatcher": {
-                "fileLocation": [
-                    "relative",
-                    "${workspaceRoot}"
-                ],
-                "pattern": {
-                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
-                    "file": 1,
-                    "line": 2,
-                    "column": 3,
-                    "severity": 4,
-                    "message": 5
-                }
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "presentation": {
+                "reveal": "always"
             }
         },
         {
             "label": "execute",
-            "command": "cmd",
+            "type": "shell",
+            "command": "${fileDirname}/${fileBasenameNoExtension}",
             "group": {
                 "kind": "test",
                 "isDefault": true
             },
-            "args": [
-                "/C",
-                "${fileDirname}\\${fileBasenameNoExtension}"
-            ]
+            "presentation": {
+                "reveal": "always"
+            }
         },
         {
             "type": "cppbuild",
             "label": "C/C++: g++.exe 활성 파일 빌드",
             "command": "C:\\mingw64\\bin\\g++.exe",
             "args": [
+                "-Wall",
+                "-Wextra",
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
@@ -91,7 +78,10 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "detail": "디버거에서 생성된 작업입니다."
+            "detail": "디버거에서 생성된 작업입니다.",
+            "presentation": {
+                "reveal": "always"
+            }
         }
     ]
 }
