--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ CPS(소스파일)
 CPS_check
 DataStructureAlgorithm
 CPS 문제파일.pdf
+CPS\section3-sorting-binary-search-decision-two-pointer-stack\input.txt
+CPS\section-2-code-implementation\input.txt
