--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ DataStructureAlgorithm
 CPS 문제파일.pdf
 CPS\section3-sorting-binary-search-decision-two-pointer-stack\input.txt
 CPS\section-2-code-implementation\input.txt
+Section5
